--- a/output/figures/table_demographics_by-condition.html
+++ b/output/figures/table_demographics_by-condition.html
@@ -281,15 +281,39 @@ border: 0;
 </head>
 <body>
 <table class=" lightable-classic" style="font-family: Cambria; width: auto !important; margin-left: auto; margin-right: auto;">
+<caption>Table A1. Sample demographics by condition.</caption>
  <thead>
+<tr>
+<th style="empty-cells: hide;" colspan="1"></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="6"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">Perceived Importance of Testing</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="6"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">Likelihood of Getting Tested</div></th>
+</tr>
 <tr>
 <th style="empty-cells: hide;" colspan="1"></th>
 <th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">Compassion</div></th>
 <th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">Exponential</div></th>
 <th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">Control</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">Compassion</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">Exponential</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">Control</div></th>
+</tr>
+<tr>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="1"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">Female/Male</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">7/6</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">8/6</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">17/3</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">7/2</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">4/3</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">6/2</div></th>
 </tr>
   <tr>
    <th style="text-align:left;">   </th>
+   <th style="text-align:left;"> M (n) </th>
+   <th style="text-align:left;"> SD </th>
+   <th style="text-align:left;"> M (n) </th>
+   <th style="text-align:left;"> SD </th>
+   <th style="text-align:left;"> M (n) </th>
+   <th style="text-align:left;"> SD </th>
    <th style="text-align:left;"> M (n) </th>
    <th style="text-align:left;"> SD </th>
    <th style="text-align:left;"> M (n) </th>
@@ -301,28 +325,46 @@ border: 0;
 <tbody>
   <tr>
    <td style="text-align:left;color: black !important;"> Australia </td>
-   <td style="text-align:left;color: black !important;"> 24.3 (9) </td>
+   <td style="text-align:left;color: black !important;"> 24.1 (11) </td>
    <td style="text-align:left;color: black !important;"> 2.7 </td>
-   <td style="text-align:left;color: black !important;"> 24.2 (6) </td>
-   <td style="text-align:left;color: black !important;"> 4.9 </td>
-   <td style="text-align:left;color: black !important;"> 24.1 (7) </td>
-   <td style="text-align:left;color: black !important;"> 2.9 </td>
+   <td style="text-align:left;color: black !important;"> 23.4 (8) </td>
+   <td style="text-align:left;color: black !important;"> 4.4 </td>
+   <td style="text-align:left;color: black !important;"> 23.2 (9) </td>
+   <td style="text-align:left;color: black !important;"> 3.3 </td>
+   <td style="text-align:left;color: black !important;"> 24.2 (8) </td>
+   <td style="text-align:left;color: black !important;"> 2.8 </td>
+   <td style="text-align:left;color: black !important;"> 22.2 (6) </td>
+   <td style="text-align:left;color: black !important;"> 4.6 </td>
+   <td style="text-align:left;color: black !important;"> 21.4 (5) </td>
+   <td style="text-align:left;color: black !important;"> 3.3 </td>
   </tr>
   <tr>
    <td style="text-align:left;color: black !important;"> Other Migrants </td>
-   <td style="text-align:left;color: black !important;"> 23 (4) </td>
-   <td style="text-align:left;color: black !important;"> 2.3 </td>
-   <td style="text-align:left;color: black !important;"> 26.2 (6) </td>
-   <td style="text-align:left;color: black !important;"> 5.5 </td>
-   <td style="text-align:left;color: black !important;"> 25.8 (6) </td>
-   <td style="text-align:left;color: black !important;"> 2 </td>
+   <td style="text-align:left;color: black !important;"> 23 (2) </td>
+   <td style="text-align:left;color: black !important;"> 2.8 </td>
+   <td style="text-align:left;color: black !important;"> 28 (3) </td>
+   <td style="text-align:left;color: black !important;"> 5.6 </td>
+   <td style="text-align:left;color: black !important;"> 26.6 (5) </td>
+   <td style="text-align:left;color: black !important;"> 0.9 </td>
+   <td style="text-align:left;color: black !important;"> 21 (1) </td>
+   <td style="text-align:left;color: black !important;"> - </td>
+   <td style="text-align:left;color: black !important;"> 33 (1) </td>
+   <td style="text-align:left;color: black !important;"> - </td>
+   <td style="text-align:left;color: black !important;"> 26 (2) </td>
+   <td style="text-align:left;color: black !important;"> 0 </td>
   </tr>
   <tr>
    <td style="text-align:left;color: black !important;"> Viet Nam </td>
    <td style="text-align:left;color: black !important;"> - </td>
    <td style="text-align:left;color: black !important;"> - </td>
-   <td style="text-align:left;color: black !important;"> 33 (8) </td>
-   <td style="text-align:left;color: black !important;"> 5.1 </td>
+   <td style="text-align:left;color: black !important;"> 32.8 (9) </td>
+   <td style="text-align:left;color: black !important;"> 4.8 </td>
+   <td style="text-align:left;color: black !important;"> - </td>
+   <td style="text-align:left;color: black !important;"> - </td>
+   <td style="text-align:left;color: black !important;"> - </td>
+   <td style="text-align:left;color: black !important;"> - </td>
+   <td style="text-align:left;color: black !important;"> 33 (1) </td>
+   <td style="text-align:left;color: black !important;"> - </td>
    <td style="text-align:left;color: black !important;"> - </td>
    <td style="text-align:left;color: black !important;"> - </td>
   </tr>
